--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.CAPTURE_VIDEO_OUTPUT"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"
+        android:required="true" />
 
     <meta-data android:name="com.google.android.gms.vision.DEPENDENCIES" android:value="barcode"/>
 
@@ -12,7 +14,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
